package Position

class Position(
       private val posX: Int,
       private val posY: Int
){
    fun getPosX(): Int{
        return posX
    }
    fun getPosY(): Int{
        return posY
    }
}
