package Tile

import Piece

interface Tile {
fun isOccupied(): Boolean
fun getPiece(): Piece

}
